tmpfs_rename: handle hard-links correctly.  Fixes PR/41236.